--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
 
 /* Home Page Style */
 .ww-home-page {
-  background: url("../images/boda/prueba2.jpg") no-repeat center center;
+  background: url("../images/boda/raul_antonia.jpg") no-repeat center center;
   background-size: cover;
   background-position: 70%;
   height: 100vh;
